# flood-depth-estimator

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_FLOW.md  COLAB_QUICK_START.md  COLAB_RETRAINING_GUIDE.md  DATASET_AUDIT_REPORT.md  DEEPLAB_TRAINING_PLAN.md  Dockerfile  END_TO_END_FLOW.md  Flood_Depth_Google_Colab.ipynb  OPTION_A_COMPLETE_GUIDE.md  QUICKSTART.md  README.md  REVIEW_CONTEXT.md  Retrain_Existing_Model_GitHub.py  Retrain_with_AutoDownload.ipynb  S3_QUICKSTART.md  S3_SETUP.md  SETUP.md  WATER_DETECTION_SUMMARY.md  app.py  architecture.html  core_logic.py  dashboard.html  debug_detection.py  docker-compose.yml  enterprise_flood_model.py  example_temporal_usage.py  final_water_detection_system.py  ingestor.py  main.py  mc_dropout.py  pyproject.toml  railway.toml  requirements-local.txt  requirements-production.txt  requirements.txt  retrain_flood_classifier.py  schemas.py  (+8 more)
api/: README.md  server.py
app/: auto_label_dataset.py  model_paths.py  predict_folder.py  predict_image.py  predict_image_v2.py  predict_validation.py  test_deeplab.py  test_depth_image.py  train_severity_classifier.py  yolo_test.py
archived/: Audit_baseline.py  DATA_ACQUISITION_PLAN.md  FLOODNET_DOWNLOAD_GUIDE.md  FLOOD_DATASET_SOURCES.md  HALLUCINATION_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Retrain_Existing_Model_GitHub.py  SEGMENTATION_MIGRATION_PLAN.md  TEMPORAL_ANALYSIS_GUIDE.md  WATER_DETECTION_GUIDE.md  WATER_DETECTION_INTEGRATION.md  WEEK1_README.md  audit_repo.py  build_test_suite.py  colab_retrain_gemini_strict.py  core_logic.py  create_edge_case_images.py  dump.rdb  (+34 more)
(+193 files in other folders)
