[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flood-depth-estimator"
version = "2.0.0"
description = "Bengaluru flood depth estimation — enterprise production"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "efficientnet_pytorch>=0.7.1",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "gunicorn>=22.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.3.0",
    "google-generativeai>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tasks*", "temporal_aggregator*", "mc_dropout*", "schemas*", "src*"]
exclude = ["archived*", "tests*", "*.ipynb", "Retrain*", "colab*", "retrain*"]
